--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@
 **/bin
 **/obj
 project.lock.json
+C++/bench
+C++/bench.dSYM/Contents/Info.plist
+C++/bench.dSYM/Contents/Resources/DWARF/bench
+C++/bench.dSYM/Contents/Resources/Relocations/aarch64/bench.yml
+~$bench.xlsx
+package_config.json
