--- a/Dart/pubspec.yaml
+++ b/Dart/pubspec.yaml
@@ -5,12 +5,12 @@ version: 0.0.1
 #author: Regis Cridlig <email@example.com>
 
 environment:
-#  sdk: '>=1.20.1 <2.0.0'
+  sdk: '^3.2.0'
 
 dependencies:
   path: ^1.4.1
   js: ^0.6.1
-  intl: ^0.16.1
+  intl: ^0.19.0
   
 dev_dependencies:
  # test: ^0.12.0
