--- a/Typescript/package.json
+++ b/Typescript/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "bench.ts",
   "dependencies": {
-    "npm": "^5.8.0"
+    "npm": ">=6.14.6"
   },
   "devDependencies": {
     "@types/node": "^8.10.66",
